--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Ohbot Control Panel</title>
-        <link href="static/main.css" rel="stylesheet">
-        <script src="static/app.js" async></script>
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Ohbot Control Panel</title>
+    <link href="static/main.css" rel="stylesheet">
+    <script src="static/app.js" async></script>
+</head>
+
+<body>
+    <nav>
+        <ul id="nav">
+            <li><a href="/">ohbot</a></li>
+        </ul>
+    </nav>
+    <section role="main">
+        <div class="form">
+            <input id="channel" placeholder="channel"><button id="go-channel">Switch</button>
+        </div>
+        <div id="channel-data"></div>
+    </section>
+    <footer>
+        <p>&copy; <a href="https://3v.fi/">3v.fi</a></p>
+    </footer>
+</body>
+
 </html>
