--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ohbot Control Panel</title>
     <link href="static/main.css" rel="stylesheet">
     <script src="static/app.js" async></script>
